--- a/less/blocks/download.less
+++ b/less/blocks/download.less
@@ -5,8 +5,8 @@
 
 .download__wrapper {
   .container();
-  padding-top: 27px;
-  padding-bottom: 18px;
+  padding-top: 28px;
+  padding-bottom: 28px;
 }
 
 .download__promo {
@@ -50,9 +50,10 @@
 .download__link {
   display: block;
   width: 280px;
+  height: 55px;
   margin: 0 auto;
-  margin-bottom: 32px;
-  padding: 15px 0;
+  margin-bottom: 35px;
+  padding: 16px 0;
   font-size: 18px;
   font-weight:  bold;
   line-height: 1;
@@ -75,6 +76,7 @@
 }
 
 .download__desc {
+  margin: 0;
   font-size: 14px;
   font-weight: lighter;
   line-height: 24px;
@@ -86,9 +88,9 @@
   .download {
     .container();
     background: url(../img/iphone-hand-mobile@1x.png) no-repeat right bottom;
-    background-size: auto 550px;
-    padding-top: 46px;
-    padding-bottom: 75px;
+    background-size: 465px 550px;
+    padding-top: 42px;
+    padding-bottom: 83px;
     margin-top: 0;
   }
 
@@ -101,6 +103,7 @@
     display: block;
     width: 186px;
     margin-bottom: 33px;
+    text-align: center;
     p {
       font-size: 40px;
       font-weight: lighter;
