--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -11,8 +11,8 @@
 .page-header__title {
   margin: 0;
   .container();
-  padding-top: 36px;
-  padding-bottom: 65px;
+  padding-top: 35px;
+  padding-bottom: 85px;
   font-size: 24px;
   font-weight: lighter;
   color: #ffffff;
@@ -23,14 +23,15 @@
   }
 
   &--form {
-    padding-top: 7px;
-    padding-bottom: 36px;
+    padding-top: 28px;
+    padding-bottom: 52px;
+    line-height: 30px;
   }
 }
 
 .page-header__photo {
   margin-bottom: -7px;
-  padding-top: 107px;
+  padding-top: 108px;
 }
 
 @media @tablet-widths {
@@ -40,8 +41,13 @@
     line-height: 61px;
 
     &--form {
-      padding-bottom: 45px;
-      padding-top: 36px;
+      padding-top: 67px;
+      padding-bottom: 78px;
+    }
+
+    &--photo {
+      padding-top: 70px;
+      padding-bottom: 135px;
     }
   }
 
