--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -61,7 +61,7 @@
 }
 
 .main-nav__item {
-  border-top: 1px solid #1d2631;
+  border-top: 1px solid #000000;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
 
   &--active {
@@ -113,6 +113,7 @@
 
   .main-nav--nojs .main-nav__list {
     display: block;
+    border-bottom: 1px solid #000000;
   }
 
   .main-nav--nojs .main-nav__item--active a {
@@ -128,7 +129,7 @@
   }
 
   .main-nav__logo {
-    padding: 28px 0 42px 41px;
+    padding: 33px 0 47px 41px;
   }
 
   .main-nav__list {
