--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -11,7 +11,7 @@
 }
 
 .page-footer__logo {
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   width: 150px;
 
   svg {
@@ -35,14 +35,22 @@
 
 .page-footer__copyright {
   margin-bottom: 30px;
+  text-align: center;
+
+  svg {
+    width: 27px;
+    height: 34px;
+  }
 
   a {
     font-size: 0;
   }
 
   span {
+    padding-right: 10px;
     font-size: 14px;
     line-height: 50px;
+    vertical-align: middle;
   }
 }
 
@@ -63,31 +71,49 @@
 
 @media @tablet-widths {
   .page-footer {
-    padding-bottom: 40px;
+    padding-top: 40px;
+    padding-bottom: 30px;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     &--hide {
       display: flex;
     }
   }
-}
 
-.page-footer__logo {
-  width: 150px;
-}
+  .page-footer__logo {
+    width: 150px;
+    margin-bottom: 35px;
+  }
 
-.footer__copyright {
-  width: 220px;
-  height: 50px;
-  font-size: 14px;
-  span {
-    line-height: 50px;
-    vertical-align: middle;
+  .page-footer__social {
+    display: flex;
+    justify-content: center;
+    width: 180px;
+    flex-grow: 1;
+  }
+
+
+  .page-footer__copyright {
+    width: 150px;
+    height: 50px;
+    padding-left: 22px;
     font-size: 14px;
+
+    span {
+      padding-right: 12px;
+      line-height: 50px;
+      vertical-align: middle;
+      font-size: 14px;
+    }
+
+    svg {
+      width: 27px;
+      height: 34px;
+    }
   }
 }
-
 
 @media @desktop-widths {
   .page-footer {
