--- a/less/blocks/price.less
+++ b/less/blocks/price.less
@@ -1,13 +1,15 @@
 .price {
-  padding-top: 92px;
-  padding-bottom: 43px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  min-height: 468px;
   background: rgb(242, 242, 242) url(../img/bg-triangle-white.svg) no-repeat;
   background-size: contain;
 
   td,
   th {
     padding: 13px 25px 16px 22px;
-    border: 2px solid #e5e5e5;
+    border-bottom: 2px solid #e5e5e5;
+    border-right: 2px solid #e5e5e5;
     line-height: 30px;
   }
 
@@ -18,6 +20,10 @@
 
   td {
     background-color: #ffffff;
+  }
+
+  input {
+    display: none;
   }
 }
 
@@ -63,7 +69,7 @@ th.price__tariff-option {
   position: relative;
   padding-top: 20px;
   padding-bottom: 12px;
-  width: 320px;
+  width: 280px;
   text-align: center;
   color: #ffffff;
   border-bottom: none;
@@ -124,6 +130,7 @@ th.price__tariff-option {
   .price {
     padding-top: 8px;
     padding-bottom: 0;
+    min-height: 376px;
     background-color: rgb(242, 242, 242);
 
     th,
@@ -142,8 +149,8 @@ th.price__tariff-option {
 
   .price__table {
     margin: 0 auto;
+    margin-top: 30px;
     margin-bottom: 70px;
-    margin-top: 82px;
     width: 620px;
 
     &--active {
@@ -161,13 +168,10 @@ th.price__tariff-option {
   }
 
   td.price__item {
-    padding: 5px 17px 7px 15px;
-    border-top-color: transparent;
-    border-right-color: transparent;
+    padding: 5px 27px 7px 15px;
   }
 
   .price__item {
-    border-top-color: transparent;
     border-right-color: transparent;
     text-transform: none;
 
