--- a/less/blocks/research.less
+++ b/less/blocks/research.less
@@ -9,8 +9,8 @@
 
     h2 {
       margin: 0;
-      margin-top: 23px;
-      width: 175px;
+      margin-top: 25px;
+      width: 168px;
       font-size: 30px;
       font-weight: bold;
       line-height: 36px;
@@ -20,6 +20,7 @@
     p {
       margin: 10px 0;
       font-size: 14px;
+      letter-spacing: 0.35px;
       line-height: 24px;
     }
   }
@@ -50,6 +51,7 @@
     display: block;
     font-size: 14px;
     line-height: 24px;
+    letter-spacing: 0.35px;
     color: rgb(240, 40, 86);
   }
 }
