--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -2,6 +2,7 @@
   .container();
   padding-top: 25px;
   padding-bottom: 37px;
+  min-height: 352px;
 }
 
 .reviews__items {
@@ -41,6 +42,7 @@
   .reviews {
     padding-top: 30px;
     padding-bottom: 15px;
+    min-height: 302px;
   }
 
   .reviews__item {
