Десктопные версии страниц

--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -129,8 +129,8 @@
 
 @media @desktop-widths {
   .advantages__promo {
-    padding-top: 77px;
-    padding-bottom: 77px;
+    padding-top: 65px;
+    padding-bottom: 70px;
   }
 
   .advantages__slogan {
@@ -143,12 +143,16 @@
     }
   }
 
+  .advantages__wrapper {
+    padding-bottom: 15px;
+  }
+
   .advantages__list {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    padding-top: 47px;
-    padding-bottom: 47px;
+
+    padding-top: 0;
     text-align: center;
   }
 
@@ -165,7 +169,7 @@
   }
 
   .advantages__item-text {
-    padding: 0 32px;
+    padding: 0 26px;
     font-size: 18px;
     line-height: 30px;
     text-align: center;
