--- a/less/blocks/gallery.less
+++ b/less/blocks/gallery.less
@@ -233,22 +233,32 @@
     }
   }
 
+  .gallery__post {
+    margin-bottom: 56px;
+  }
+
   .gallery__promo {
-    width: 780px;
-    margin-bottom: 76px;
+    width: 580px;
+    margin-bottom: 86px;
     font-size: 18px;
+  }
+
+  .gallery__post-photo {
+    height: 400px;
   }
 
  .gallery__post-content {
     &--daily {
       min-height: auto;
-      padding-top: 20px;
-      padding-bottom: 25px;
+      padding-top: 22px;
+      padding-bottom: 12px;
     }
   }
 
+
   .gallery__call-to-action {
     width: 100%;
+    padding-top: 10px;
     font-size: 18px;
     line-height: 30px;
   }
