--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -150,6 +150,7 @@
   }
 
   .main-nav__logo {
+    min-width: 147px;
     padding: 0;
     margin-right: 132px;
   }
@@ -185,6 +186,11 @@
     padding-right: 41px;
     padding-left: 41px;
     font-weight: normal;
+  }
+
+  .main-nav__item--academy a {
+    padding-left: 42px;
+    padding-right: 5px;
   }
 
   .main-nav__item a[href] {
