--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -117,11 +117,25 @@
 
 @media @desktop-widths {
   .page-footer {
-    padding: 70px 0;
+    padding: 62px 0;
+
+    &--photo {
+      padding-top: 102px;
+      padding-bottom: 42px;
+    }
+  }
+
+  .page-footer__logo {
+    margin-right: 100px;
+  }
+
+  .page-footer__social {
+    width: 200px;
   }
 
   .page-footer__copyright {
     width: 250px;
+    text-align: right;
     span {
       font-size: 18px;
     }
