--- a/less/blocks/price.less
+++ b/less/blocks/price.less
@@ -223,7 +223,7 @@ th.price__tariff-option {
 @media @desktop-widths {
 
   .price {
-    padding-top: 74px;
+    padding-top: 67px;
 
     th {
       padding-top: 18px;
@@ -242,6 +242,10 @@ th.price__tariff-option {
 
   .price__item {
     font-size: 18px;
+
+    &--hide {
+      width: 236px;
+    }
   }
 
   .price__tariff-option {
