--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -10,7 +10,7 @@
   line-height: 30px;
   text-align: center;
 
-  &--hide {
+  span {
     display: none;
   }
 }
@@ -234,6 +234,10 @@
   i {
     color: #d22856;
   }
+
+  span {
+    display: none;
+  }
 }
 
 .form__notice {
@@ -295,16 +299,14 @@
   .form__promo {
     width: 510px;
     padding-top: 93px;
-    margin-bottom: 0;
+    margin-bottom: 75px;
     order: -4;
     font-size: 18px;
     letter-spacing: 0.15px;
 
 
-    &--hide {
+    span {
       display: block;
-      padding: 0;
-      margin-bottom: 75px;
     }
   }
 
@@ -422,7 +424,7 @@
 
   .form__textarea {
     width: 496px;
-    margin-bottom: 57px;
+    margin-bottom: 60px;
     margin-left: 33px;
   }
 
@@ -468,9 +470,10 @@
 
 
   .form__reminder {
+    margin-right: 0;
+    margin-bottom: 50px;
     line-height: 63px;
     vertical-align: middle;
-    margin-right: 0;
     text-align: right;
   }
 
@@ -496,7 +499,13 @@
 @media @desktop-widths {
 
   .form__promo {
+    width: 760px;
+    margin-bottom: 82px;
+    padding-right: 15px;
     order: -4;
+    span {
+      display: inline-block;
+    }
   }
 
   .form__group {
@@ -510,33 +519,55 @@
       order: -3;
       padding: 0;
       padding-top: 5px;
+
+      .form__inner:last-of-type {
+        margin-bottom: 0;
+      }
     }
 
     &--app {
       width: 440px;
       order: -2;
       padding-bottom: 20px;
-      margin-bottom: 68px;
+      margin-bottom: 55px;
     }
 
     &--contacts {
       width: 100%;
       order: -1;
       padding-top: 42px;
-      padding-bottom: 14px;
-      margin-bottom: 68px;
+      padding-bottom: 0;
+      margin-bottom: 65px;
+
+      .form__container {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: no-wrap;
+      }
+
+      .form__inner {
+        width: 50%;
+        margin-bottom: 0;
+        margin-left: 40px;
+      }
+
+      .form__input-text{
+        width: 371px;
+      }
     }
 
     &--progress {
-      min-height: 240px;
-      padding-top: 45px;
-      margin-bottom: 58px;
+      min-height: 230px;
+      padding-top: 55px;
+      margin-bottom: 63px;
 
       .form__container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+
       }
     }
 
@@ -545,14 +576,54 @@
     }
   }
 
+
+
+  .form__radio + .form__radio-label {
+    padding-left: 125px;
+  }
+
+  .form__radio + .form__radio-label::before {
+    margin-right: 0;
+    margin-left: 66px;
+  }
+
+  .form__radio:checked + .form__radio-label::after {
+    left: 78px;
+    top: 50%;
+    bottom: 50%;
+    transform: translateY(-50%);
+    border-radius: 50%;
+  }
+
+
   .form__checkbox-label {
     position: relative;
     display: block;
     width: 290px;
-    margin-bottom: 60px;
-    padding-left: 80px;
+    margin-bottom: 40px;
+    padding-left: 85px;
     font-size: 18px;
     line-height: 39px;
+  }
+
+  .form__checkbox + .form__checkbox-label::before {
+    left: 33px;
+  }
+
+  .form__reminder {
+    width: 320px;
+    line-height: 30px;
+    margin-bottom: 0;
+    span {
+      display: inline-block;
+    }
+  }
+
+  .form__textarea {
+    width: 836px;
+    min-height: 124px;
+    margin-top: 45px;
+    margin-bottom: 45px;
   }
 
   .form__btn {
