--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -62,5 +62,16 @@
     padding-top: 30px;
     padding-bottom: 66px;
     font-size: 50px;
+
+    &--form {
+      padding-top: 62px;
+      padding-bottom: 100px;
+    }
+
+    &--photo {
+      padding-top: 62px;
+      padding-bottom: 100px;
+      width: 360px;
+    }
   }
 }
