--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -71,6 +71,7 @@
 
 @media @desktop-widths {
   .reviews {
+    min-height: 415px;
     padding-bottom: 36px;
   }
 
@@ -84,4 +85,37 @@
   .reviews__author-info {
     font-size: 18px;
   }
+
+  .reviews__arrow-control {
+    display: block;
+  }
+
+  .reviews__arrow {
+    display: block;
+    position: absolute;
+    width: 22px;
+    height: 41px;
+    top: 50%;
+    cursor: pointer;
+    opacity: 0.3;
+
+    &--prev {
+      left: 0;
+    }
+    &--next {
+      right: 0;
+    }
+    &:hover {
+      opacity: 1;
+    }
+    &:active {
+      opacity: .1;
+    }
+  }
+
+  .reviews__controller {
+    display: none
+  }
 }
+
+
