--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -152,7 +152,7 @@
   .main-nav__logo {
     min-width: 147px;
     padding: 0;
-    margin-right: 132px;
+    margin-right: 173px;
   }
 
   .main-nav__wrapper {
@@ -165,7 +165,7 @@
 
   .main-nav__list {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     text-transform: none;
     background-color: transparent;
@@ -176,22 +176,15 @@
     box-shadow: none;
 
     &--active {
-      padding-right: 41px;
-      padding-left: 41px;
       font-weight: normal;
     }
   }
 
   .main-nav__item a {
-    padding-right: 41px;
-    padding-left: 41px;
+    display: block;
     font-weight: normal;
   }
 
-  .main-nav__item--academy a {
-    padding-left: 42px;
-    padding-right: 5px;
-  }
 
   .main-nav__item a[href] {
     &:hover {
