--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -123,6 +123,10 @@
       padding-top: 102px;
       padding-bottom: 42px;
     }
+
+    &--form {
+      padding-top: 72px;
+    }
   }
 
   .page-footer__logo {
