--- a/less/blocks/gallery.less
+++ b/less/blocks/gallery.less
@@ -4,6 +4,10 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  img {
+    width: 100%;
+  }
 }
 
 .gallery__promo {
