--- a/less/blocks/research.less
+++ b/less/blocks/research.less
@@ -37,8 +37,8 @@
       top: 0;
       width: 240px;
       height: 277px;
-      background: url(../img/icon-editor-diagram-fill.svg) center 60px no-repeat;
-      background-size: 178px 198px;
+      background: url(../img/icon-editor-diagram-fill.svg) center 60px no-repeat, url(../img/icon-timer.svg) center no-repeat;
+      background-size: 178px 198px, 240px auto;
       font-size: 96px;
       font-weight: bold;
       text-align: center;
@@ -68,7 +68,7 @@
     }
 
     p {
-      width: 500px;
+      width: 520px;
       font-size: 18px;
       line-height: 30px;
     }
@@ -78,8 +78,8 @@
     &:before {
       width: 298px;
       height: 345px;
-      background-size: 253px 253px;
-      background-position: center 70px;
+      background-size: 253px 253px, 298px auto;
+      background-position: center 70px, center;
       line-height: 380px;
       font-size: 120px;
     }
