--- a/less/blocks/upload.less
+++ b/less/blocks/upload.less
@@ -4,6 +4,9 @@
   text-align: center;
   background-color: rgb(242, 242, 242);
 
+  img {
+    width: 100%;
+  }
 }
 
 .upload__form {
@@ -117,7 +120,7 @@
   color: #d22856;
   border: 3px solid #d22856;
   border-radius: 50px;
-  background-color: #ffffff;
+  background-color: transparent;
 
   &:last-child {
     margin-bottom: 0;
