--- a/less/variables.less
+++ b/less/variables.less
@@ -30,3 +30,4 @@
 @mobile-widths-only: ~"(max-width: 1199px)";
 @tablet-widths: ~"(min-width: 660px)";
 @desktop-widths: ~"(min-width: 1200px)";
+@retina: ~"(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
