--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -123,14 +123,15 @@
 
   .advantages__photo {
     display: block;
-    width: 300px;
+    height: 480px;
+    width: 270px;
   }
 }
 
 @media @desktop-widths {
   .advantages__promo {
     padding-top: 65px;
-    padding-bottom: 70px;
+    padding-bottom: 77px;
   }
 
   .advantages__slogan {
@@ -157,19 +158,21 @@
   }
 
   .advantages__item {
+    padding: 0;
     width: 300px;
   }
 
   .advantages__item-title {
     margin: 0 auto;
-    width: 250px;
+    width: 240px;
     font-size: 30px;
-    line-height: 36px;
-    margin-bottom: 40px;
+    line-height: 30px;
+    margin-bottom: 28px;
   }
 
   .advantages__item-text {
-    padding: 0 26px;
+    width: 230px;
+    margin: 0 auto;
     font-size: 18px;
     line-height: 30px;
     text-align: center;
@@ -179,7 +182,7 @@
     display: block;
     order: -1;
     width: 300px;
-    height: 280px;
+    height: 300px;
     overflow: hidden;
     margin-bottom: 56px;
     box-shadow: inset 0 -5px 10px -10px #34495e;
