--- a/less/blocks/download.less
+++ b/less/blocks/download.less
@@ -87,11 +87,15 @@
 @media @tablet-widths {
   .download {
     .container();
-    background: url(../img/iphone-hand-mobile@1x.png) no-repeat right bottom;
-    background-size: 465px 550px;
+    background: url(../img/iphone-hand-tablet@1x.png) no-repeat center bottom;
+    background-size: auto 550px;
     padding-top: 42px;
     padding-bottom: 83px;
     margin-top: 0;
+
+    @media @retina {
+      background-image: url(../img/iphone-hand-tablet@2x.png);
+    }
   }
 
   .download__wrapper {
@@ -127,8 +131,13 @@
 
 @media @desktop-widths {
   .download {
-    padding-top: 87px;
-    padding-bottom: 99px;
+    padding-top: 86px;
+    padding-bottom: 95px;
+    background: url(../img/iphone-hand-desktop@1x.png) -10% bottom no-repeat;
+    background-size:  1050px 645px;
+    @media @retina {
+      background-image: url(../img/iphone-hand-desktop@2x.png);
+    }
   }
   .download__wrapper {
     width: 300px;
@@ -148,6 +157,6 @@
     }
   }
   .download__list {
-    margin-bottom: 55px;
+    margin-bottom: 58px;
   }
 }
