--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -5,47 +5,68 @@
   color: #ffffff;
   font-weight: bold;
 
-  &--closed {
-    background-color: rgba(29, 38, 50, 0.3);
+
+  &--opened {
+    background-color: #263341;
   }
 
-  &--nojs {
-    background-color: #263341;
+  &--closed {
+    background-color: rgba(29, 38, 49, 0.6);
   }
 }
 
 .main-nav__logo {
   top: 0;
-  padding-top: 21px;
-  padding-bottom: 19px;
-  padding-left: 20px;
+  padding: 20px;
+  padding-bottom: 26px;
   text-align: left;
+  border-bottom: 1px solid #000000;
 }
 
-.main-nav__toggler  {
+.main-nav__logo-svg {
+  &--tablet {
+    display: none;
+  }
+  &--desktop {
+    display: none;
+  }
+  &--mobile {
+    display: block;
+  }
+  &:hover .main-nav__logo-color {
+    fill: #263341;
+  }
+  &:active .main-nav__logo-color {
+    fill: #ffffff;
+    opacity: 0.3;
+  }
+}
+
+.main-nav__toggler {
   position: absolute;
   right: 20px;
-  top: 10px;
-  z-index: 20;
+  top: 19px;
   display: block;
-  width: 85px;
-  height: 50px;
-  font-size: 0;
-  cursor: pointer;
+  margin: 16px 0 21px;
   border: none;
+  outline: none;
   background-color: transparent;
+  font-size: 0;
+  z-index: 100;
+  &:hover .main-nav__toggler-fill {
+    fill: #263341;
+  }
+  &:active .main-nav__toggler-fill {
+    opacity: 0.3;
+  }
 }
 
-.main-nav--closed .main-nav__toggler::before {
-  content: "";
-  position: absolute;
-  top: 15px;
-  left: 17px;
-  width: 50px;
-  height: 4px;
-  background-color: #ffffff;
-  box-shadow: 0 10px 0 0 #ffffff,
-              0 20px 0 0 #ffffff;
+.main-nav--opened .main-nav__toggler-closed {
+  display: none;
+}
+
+.main-nav--closed .main-nav__toggler-opened {
+  display: none;
 }
 
 .main-nav__list {
@@ -54,30 +75,23 @@
   width: 100%;
   list-style: none;
   text-align: center;
-  font-size: 18px;
-  line-height: 32px;
   text-transform: uppercase;
   background-color: #263341;
 }
 
 .main-nav__item {
-  border-top: 1px solid #000000;
+  text-transform: uppercase;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
-
-  &--active {
-    padding: 15px 0 16px 0;
-    font-weight: bold;
-  }
+  border-bottom: 1px solid #000000;
 
   a {
     display: block;
-    padding: 15px 0 16px 0;
-    font-size: 18px;
-    line-height: 32px;
-    font-weight: bold;
-    color: #ffffff;
+    padding: 16px 0 15px 0;
     text-decoration: none;
-
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 32px;
     &:hover {
       color: #d22856;
     }
@@ -87,53 +101,46 @@
   }
 }
 
+.main-nav--nojs .main-nav__toggler-closed,
+.main-nav--nojs .main-nav__toggler-opened {
+  display: none;
+}
+
 @media @mobile-widths-only {
   .main-nav--closed .main-nav__list {
     display: none;
   }
-
-  .main-nav--opened .main-nav__wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 70px;
-    z-index: 10;
-    height: 80vh;
-    background-color: #6a4d38;
-  }
-
-  .main-nav--nojs .main-nav__toggler {
+  .main-nav--closed .main-nav__item {
     display: none;
-  }
-
-  .main-nav--nojs .main-nav__wrapper {
-    position: static;
-    height: auto;
-  }
-
-  .main-nav--nojs .main-nav__list {
-    display: block;
-    border-bottom: 1px solid #000000;
-  }
-
-  .main-nav--nojs .main-nav__item--active a {
-    padding-right: 21px;
-    padding-left: 21px;
-    text-align: left;
   }
 }
 
 @media @tablet-widths {
-  .main-nav {
-    margin: 0 auto;
+  .main-nav__wrapper {
+    padding-bottom: 256px;
   }
 
   .main-nav__logo {
-    padding: 33px 0 47px 41px;
+    padding: 28px 0 42px 21px;
   }
-
+  .main-nav__logo-svg {
+    &--tablet {
+      display: block;
+    }
+    &--mobile {
+      display: none;
+    }
+  }
+  .main-nav--closed .main-nav__list {
+    position: absolute;
+  }
+  .main-nav__toggler {
+    top: 45px;
+    right: 40px;
+  }
   .main-nav__list {
-    display: none;
+    position: absolute;
+    z-index: 10;
   }
 }
 
@@ -141,8 +148,17 @@
 
   .main-nav {
     display: flex;
+    height: 110px;
+    justify-content: space-between;
+    align-items: center;
     font-weight: normal;
     background-color: rgba(29, 38, 50, 0.3);
+  }
+
+  .main-nav__wrapper {
+    display: flex;
+    .container();
+    padding-bottom: 0;
   }
 
   .main-nav__toggler {
@@ -152,18 +168,21 @@
   .main-nav__logo {
     min-width: 147px;
     padding: 0;
+    padding-top: 3px;
     margin-right: 173px;
   }
 
-  .main-nav__wrapper {
-    .container();
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    min-height: 110px;
+  .main-nav__logo-svg {
+    &--tablet {
+      display: none;
+    }
+    &--desktop {
+      display: block;
+    }
   }
 
   .main-nav__list {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -177,25 +196,24 @@
 
     &--active {
       font-weight: normal;
+      border-bottom: 2px solid white;
     }
   }
 
   .main-nav__item a {
     display: block;
+    padding: 10px 0;
+    text-transform: none;
     font-weight: normal;
   }
 
-
   .main-nav__item a[href] {
     &:hover {
-      color: #000000;
-      background-color: #ffffff;
+      color: #d22856;
     }
 
     &:active {
       color: rgba(0, 0, 0, 0.3);
-
-      background-color: #ffffff;
       opacity: 1;
     }
   }
