--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -10,23 +10,21 @@
   }
 }
 
-.page-footer__logo {
-  margin-bottom: 35px;
+.page-footer__logo-svg {
   width: 150px;
-
-  svg {
-    width: 150px;
-    height: 40px;
-    &:hover path {
-      fill: #d22856;
-    }
-    &:active .footer__logo-svg-letter {
-      fill: #263341;
-    }
-    &:active {
-      opacity: .3;
-    }
+  height: 40px;
+  &:hover path {
+    fill: #d22856;
   }
+  &:active .page-footer__logo-svg-letter {
+    fill: #263341;
+  }
+  &:active {
+    opacity: 0.3;
+  }
+}
+.page-footer__logo-desktop {
+  display: none;
 }
 
 .page-footer__social {
@@ -36,11 +34,6 @@
 .page-footer__copyright {
   margin-bottom: 30px;
   text-align: center;
-
-  svg {
-    width: 27px;
-    height: 34px;
-  }
 
   a {
     font-size: 0;
@@ -54,15 +47,13 @@
   }
 }
 
-.page-footer__copyright-svg {
+.footer__copyright-svg {
   width: 43px;
   height: 50px;
   vertical-align: middle;
-
   &:hover path {
-    fill: #263341;
+    fill: #263341
   }
-
   &:active path {
     fill: #263341;
     opacity: 0.3;
@@ -96,28 +87,32 @@
 
 
   .page-footer__copyright {
-    width: 150px;
+    width: 134px;
     height: 50px;
-    padding-left: 22px;
+    display: flex;
+    padding-left: 0;
+    justify-content: space-between;
     font-size: 14px;
 
     span {
-      padding-right: 12px;
+      padding-right: 0;
       line-height: 50px;
       vertical-align: middle;
       font-size: 14px;
     }
+  }
 
-    svg {
-      width: 27px;
-      height: 34px;
-    }
+  .page-footer__copyright-svg {
+    width: 39px;
+    height: 50px;
+    vertical-align: middle;
   }
 }
 
 @media @desktop-widths {
   .page-footer {
     padding: 62px 0;
+    justify-content: space-between;
 
     &--photo {
       padding-top: 102px;
@@ -130,15 +125,21 @@
   }
 
   .page-footer__logo {
-    margin-right: 100px;
+    margin-right: 0;
   }
 
+  .page-footer__logo-svg {
+    display: none;
+  }
+  .page-footer__logo-desktop {
+    display: block;
+  }
   .page-footer__social {
-    width: 200px;
+    width: auto;
   }
 
   .page-footer__copyright {
-    width: 250px;
+    width: 150px;
     text-align: right;
     span {
       font-size: 18px;
