--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -6,6 +6,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+    @media @retina {
+    background-image: url(../img/bg-back-mobile@2x.jpg);
+  }
 }
 
 .page-header__title {
@@ -35,6 +39,15 @@
 }
 
 @media @tablet-widths {
+
+  .page-header {
+    background: url(../img/bg-back-tablet@1x.jpg) no-repeat;
+    background-size: cover;
+      @media @retina {
+      background-image: url(../img/bg-back-tablet@2x.jpg);
+    }
+  }
+
   .page-header__title {
     padding-bottom: 105px;
     font-size: 50px;
@@ -57,6 +70,14 @@
 }
 
 @media @desktop-widths {
+  .page-header {
+    background-image: url(../img/bg-back-desktop@1x.jpg);
+    background-size: cover;
+
+    @media @retina {
+      background-image: url(../img/bg-back-desktop@2x.jpg);
+    }
+  }
 
   .page-header__title {
     padding-top: 30px;
