--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,5 +1,12 @@
+.slider {
+  position: relative;
+}
 
 .slider__toggles {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 100px;
   margin-right: auto;
   margin-left: auto;
@@ -22,16 +29,23 @@
   background-color: rgba(40, 54, 69, 0.3);
   border-radius: 50%;
   vertical-align: middle;
-  margin-right: 14px;
+  margin-right: 13px;
   cursor: pointer;
+
+  &:first-child {
+    margin-left: 9px;
+  }
 }
 
 #btn-1:checked ~ .slider__toggles label[for="btn-1"],
 #btn-2:checked ~ .slider__toggles label[for="btn-2"],
-#btn-3:checked ~ .slider__toggles label[for="btn-3"] {
+#btn-3:checked ~ .slider__toggles label[for="btn-3"],
+#btn-4:checked ~ .slider__toggles label[for="btn-4"],
+#btn-5:checked ~ .slider__toggles label[for="btn-5"],
+#btn-6:checked ~ .slider__toggles label[for="btn-6"] {
   height: 12px;
   width: 12px;
-  background-color: #fff;
+  background-color: #ffffff;
   border: 3px solid #283645;
 }
 
@@ -39,8 +53,24 @@
   display: none;
 }
 
-input[type="radio"]#btn-1:checked ~ #slide1,
-input[type="radio"]#btn-2:checked ~ #slide2,
-input[type="radio"]#btn-3:checked ~ #slide3 {
-  display: block;
+input[type="radio"]#btn-1:checked ~ .slider__items #slide1,
+input[type="radio"]#btn-2:checked ~ .slider__items #slide2,
+input[type="radio"]#btn-3:checked ~ .slider__items #slide3 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+input[type="radio"]#btn-1:checked ~ .slider__items #slide1,
+input[type="radio"]#btn-2:checked ~ .slider__items #slide2,
+input[type="radio"]#btn-3:checked ~ .slider__items #slide3 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+@media @desktop-widths {
+  .slider__toggles {
+    display: none;
+  }
 }
